# SEO_AI_backend

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  langgraph.json  pyproject.toml  successful_output.txt  temporary.py
reAct_agent/: router_testing.py  test_graph.py  test_route.py  test_server.py  test_server_main.py  test_server_mock.py
reference_docs/: gkp_raw_sample_response.json  gkp_refined_response.py  web_search_responses.txt
src/: main.py  quick_tests.py  run_graph.py  run_quick_tests.py  sample_user_input.py  temporary_tester.py  test_user_input.py
src/agents/: testGraph.py  test_graph.py  test_router.py
src/agents/keywords_agent/: edges.py  full_article_generator.py  graph.py  graph_skeleton.py  intermediate_state.py  nodes.py  prompts.py  schemas.py  state.py  temp_data.py  test_nodes.py
src/agents/mamoon_keyword_files/: Nodes.py  Prompts.py  Schemas.py
src/api/: full_article_suggestions_route.py  keyword_agent_mock_server.py  keyword_agent_route.py  mock_server_data.py  testRoute.py  test_route.py  test_server.py
src/tools/: google_keywords_api.py  tools_initializer.py  web_search_tool.py
src/utils/: models_initializer.py  settings.py
useful_docs/: web_search_responses.txt
