[project]
name = "seo-ai-backend"
version = "0.1.0"
description = "SEO for Journalists and News Media Organizations"
authors = [
    {name = "Hussain Zaidi",email = "syedhussainzaidi2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "langgraph (>=0.4.1,<0.5.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "langchain-openai (>=0.3.16,<0.4.0)",
    "langchain-google-genai (>=2.1.4,<3.0.0)",
    "langchain-groq (>=0.3.2,<0.4.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tavily-python (>=0.7.1,<0.8.0)",
    "exa-py (>=1.13.1,<2.0.0)",
    "langchain-mistralai (>=0.2.10,<0.3.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
langgraph-cli = {extras = ["inmem"], version = "^0.2.10"}
uvicorn = "^0.34.2"
opik = "^1.7.26"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
